2023-12-17_elm_sa_kubernetes/lab_snapshots/lab10.sikademo.com/a.yml
---
# Source: example-elm-app/templates/backend-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: example-backend
spec:
  selector:
    app: example-backend
  ports:
    - port: 80
---
# Source: example-elm-app/templates/frontend-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: example-frontend
spec:
  selector:
    app: example-frontend
  ports:
    - port: 80
      targetPort: 3000
---
# Source: example-elm-app/templates/redis-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: example-redis
spec:
  selector:
    app: example-redis
  ports:
    - port: 6379
---
# Source: example-elm-app/templates/backend-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-backend
spec:
  revisionHistoryLimit: 0
  replicas: 2
  selector:
    matchLabels:
      app: example-backend
  template:
    metadata:
      labels:
        app: example-backend
    spec:
      containers:
        - name: main
          image:  ttl.sh/ondrejsika/backend2
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 100m
              memory: 200Mi
---
# Source: example-elm-app/templates/frontend-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-frontend
spec:
  revisionHistoryLimit: 0
  replicas: 2
  selector:
    matchLabels:
      app: example-frontend
  template:
    metadata:
      labels:
        app: example-frontend
    spec:
      containers:
        - name: main
          image: ttl.sh/ondrejsika/frontend2
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: 100m
              memory: 200Mi
---
# Source: example-elm-app/templates/redis-sts.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: example-redis
spec:
  serviceName: example-redis
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
  selector:
    matchLabels:
      app: example-redis
  template:
    metadata:
      labels:
        app: example-redis
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data
      containers:
        - name: main
          image: redis
          ports:
            - containerPort: 6379
          volumeMounts:
            - mountPath: /data
              name: data
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              memory: 200Mi
              cpu: 200m
---
# Source: example-elm-app/templates/frontend-ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-frontend
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - hello.jeddah10.sikademo.com
      secretName: hello.jeddah10.sikademo.com-tls
  rules:
    - host: hello.jeddah10.sikademo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: example-frontend
                port:
                  number: 80
